k8s/flux/base/infrastructure/traefik-minikube/ingress.yaml
---
# This is the main nginx ingress to redirect everything under *.traefik.minikube to the traefik service
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: nginx
  # tls:
  #   - hosts:
  #       - traefik.minikube
  rules:
    - host: '*.traefik.minikube'
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: traefik
                port:
                  number: 8080
---
# This is the nginx ingress to redirect the traefik dashboard to the traefik service
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-direct-dashboard
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: nginx
  rules:
    - host: traefik-dashboard.minikube
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: traefik
                port:
                  number: 9000
---
# This is the traefik ingress route to access the traefik dashboard via http://dashboard.traefik.minikube
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`dashboard.traefik.minikube`)
      services:
        - kind: Service
          name: traefik
          port: 9000
